app/assets/stylesheets/specific/posts.css.scss
@import "../common/000_vars.css.scss";

article.post-preview {
  height: 154px;
  width: 154px;
  margin: 0 10px 10px 0;
  float: left;
  overflow: hidden;
  text-align: center;
  @include inline-block;

  img {
    margin: auto;
  }
}

a.blacklisted-active {
  font-weight: bold;
}

.post-preview.blacklisted-active {
  display: none;
}

.post-preview {
  border: 2px solid transparent;
}

.post-preview.post-status-has-parent img {
  border: 2px solid #CC0;
}

.post-preview.post-status-deleted img {
  border: 2px solid #000;
}

.post-preview.post-status-has-children img {
  border: 2px solid #0F0;
}

.post-preview.post-status-pending img {
  border: 2px solid #00F;
}

.post-preview.post-status-flagged img {
  border: 2px solid #F00;
}

.category-1 a, a.tag-type-1 {
  color: #A00;
}

.category-3 a, a.tag-type-3 {
  color: #A0A;
}

.category-4 a, a.tag-type-4 {
  color: #0A0;
}

.post-count {
  color: #CCC;
  margin-left: 0.2em;
}

.low-post-count {
  color: red;
}

body.mode-edit {
  background: #3A3;
}

body.mode-add-fav {
  background: #FFA;
}

body.mode-remove-fav {
  background: #FFA;
}

body.mode-rating-q {
  background: #AAA;
}

body.mode-rating-s {
  background: #6F6;
}

body.mode-rating-e {
  background: #F66;
}

body.mode-vote-down {
  background: #FAA;
}

body.mode-vote-up {
  background: #AFA;
}

body.mode-lock-rating {
  background: #AA3;
}

body.mode-lock-note {
  background: #3AA;
}

body.mode-approve {
  background: #26A;
}

body.mode-add-to-pool {
  background: #26A;
}

body.mode-apply-tag-script {
  background: #A3A;
}

body.mode-edit-tag-script {
  background: white;
}

div#c-posts {
  div.notice {
    font-size: 0.8em;
    padding: 1em;
    margin-bottom: 1em;

    ul {
      margin-left: 1em;
    }

    p {
      margin: 0;
    }

    .resolved {
      margin-left: 0.5em;
      font-weight: bold;
    }
  }

  div.nav-notice {
    padding: 1em;
    margin-bottom: 1em;
    background: #EEE;
    border: 1px solid #AAA;
    position: relative;

    p {
      margin: 0;
      text-align: center;
    }
  }

  aside#sidebar #tag-list h2 {
    font-size: $h4_size;
  }

  aside#sidebar > section#pool-sidebar {
    span.ui-icon {
      color: #666;
    }
  }

  aside#sidebar > section > ul {
    margin-bottom: 1em;
  }

  aside#sidebar > section > ul li {
    list-style-type: none;
  }

  aside#sidebar > section > ul ul li {
    margin-left: 1em;
  }

  div#a-index {
    #content {
      margin-right: 6.5em;
    }

    div#jlist-rss-ads-for-show {
      float: right;
      position: absolute;
      top: 0;
      right: 10px;
    }

    menu#post-sections {
      margin-bottom: 0.5em;
      font-size: $h3_size;

      li {
        padding: 0 1em 0.5em 0;

        &.active {
          font-weight: bold;
        }
      }
    }
  }

  div#a-show {
    .active {
      font-weight: bold;
    }

    menu#post-sections {
      margin: 0;
      font-size: $h3_size;

      li {
        padding: 0 1em 0 0;
      }

      div.share a {
        margin: 0;
      }
    }

    div.notices {
      margin: 1em 0;
    }

    section {
      margin-top: 1em;
    }

    span.quick-mod {
      float: right;
    }

    .pool-name, .search-name {
      margin: 0 1em;
    }

    #nav-links {
      margin: 1em 0;
      padding: 1em 0.5em;
    }
    
    #content {
      margin-right: 7em;
    }

    #pool-nav, #search-seq-nav, #nav-help {
      li {
        position: relative;
        text-align: center;
        height: 1.5em;

        .prev {
          position: absolute;
          left: 1em;
        }

        .next {
          position: absolute;
          right: 1em;
        }

        &:hover {
          background: rgb(250, 250, 250);
        }
      }
    }

    span.close-button {
      position: absolute;
      top: 5px;
      right: 5px;
      cursor: pointer;
    }
    
    div.comments-for-post {
      width:100%
    }
  }

  div#quick-edit-div {
    textarea {
      width: 70%;
      height: 4em;
      display: block;
    }
  }
}

div#c-post-versions, div#c-artist-versions {
  div#a-index {
    a {
      word-wrap: break-word
    }

    ins, ins a {
      color: green;
      text-decoration: none;
      margin-right: 0.5em;
    }

    ins.obsolete, ins.obsolete a {
      color: darkGreen;
    }

    del, del a {
      color: red;
      text-decoration: line-through;
      margin-right: 0.5em;
    }

    del.obsolete, del.obsolete a {
      color: darkRed;
    }
  }
}

div#c-explore-posts {
  a.desc {
    font-weight: bold;
    margin: 0 0.5em;
  }

  .period {
    margin: 0 0.5em;

    &:first-child {
      margin-left: 0;
    }
  }

  #blacklist-box {
    margin-bottom: 1em;
  }

  #blacklist-list {
    display: inline;
  }

  #blacklist-list li {
    display: inline;
    margin-right: 1em;

    a {
      color: $link_color;
      cursor: pointer;
    }

    span {
      color: #AAA;
    }
  }
}

div#unapprove-dialog {
  p {
    margin-bottom: 1em;
  }
}

